styles/portfolio.css
:root {
  --main-color: black;
  --heading-font-family: "Playfair Display", serif;
  --default-font-family: "Poppins", sans-serif;
  --secondary-color: #cc0e74;
}

.hero {
  background-color: var(--secondary-color);
  text-align: center;
  padding: 160px 20px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--main-color);
  font-family: var(--heading-font-family);
  font-weight: bold;
}

h1 {
  font-weight: 96px;
}

.hero p {
  font-size: 36px;
  font-weight: bold;
  margin: 0;
}

.hero h2 {
  font-family: var(--default-font-family);
  font-weight: normal;
  font-size: 24px;
  line-height: 2;
}

.btn-branding {
  background: var(--main-color);
  border-radius: 4px;
  color: var(--secondary-color);
  font-size: 18px;
  line-height: 27px;
  padding: 15px 30px;
}

